# KernelHook

./: .bazelrc  .gitignore  CMakeLists.txt  README.md  README_zh.md  WORKSPACE.bazel
.github/workflows/: kbuild.yml  real-device-smoke.yml
bazel/: BUILD.bazel  ddk.bzl
bazel/kernel_build/: BUILD.bazel  README.md  WORKSPACE
cmake/: aarch64-linux-gnu.cmake  android-arm64.cmake
docs/: ci.md
docs/audits/: kp-port-audit-2026-04-15.md
docs/en/: api-reference.md  architecture.md  build-modes.md  examples.md  kh-root-demo.md
docs/style/: file-header.md
docs/superpowers/handoffs/: 2026-04-10-gki-6.6-sh_size-fix-handoff.md
docs/superpowers/investigations/: 2026-04-09-gki-6.6-6.12-load-failure.md
docs/superpowers/plans/: 2026-04-09-gki-6.6-sh_size-fix.md
docs/superpowers/specs/: 2026-04-09-gki-6.6-sh_size-fix-design.md
docs/zh/: api-reference.md  architecture.md  build-modes.md  examples.md  kh-root-demo.md
examples/fp_hook/: Kbuild  Makefile  Makefile.sdk  fp_hook.c
examples/hello_hook/: hello_hook.c
examples/hook_chain/: Kbuild  Makefile  Makefile.sdk  hook_chain.c
examples/hook_wrap_args/: Kbuild  Makefile  Makefile.sdk  hook_wrap_args.c
examples/kbuild_hello/: BUILD.bazel  Kbuild  Makefile  README.md  kbuild_hello_main.c
examples/ksyms_lookup/: Kbuild  Makefile  Makefile.sdk  README.md  ksyms_lookup.c
include/: export.h  hmem.h  hook.h  kh_strategy.h  ksyms.h  ktypes.h  log.h  symbol.h  sync.h  syscall.h  syscall_names.h  uaccess.h
include/arch/arm64/: inline.h  insn.h  pgtable.h
kmod/: BUILD.bazel  Kbuild  Makefile  exports.manifest
kmod/examples/hello_hook/: hello_hook.c
kmod/include/kernelhook/: hook.h  kh_symvers.h  types.h
kmod/lds/: kmod.lds
kmod/loader/: kmod_loader.c
kmod/mk/: detect_toolchain.mk  kmod.mk  kmod_sdk.mk
kmod/shim/: shim.h
kmod/shim/include/linux/: debugfs.h  printk.h  sched.h  string.h  uaccess.h
kmod/src/: compat.c  export.c  kh_strategy_boot.c  log.c  main.c  mem_ops.c  transit_setup.c
scripts/: extract_avd_crcs.py  kh_order_darwin.txt  kh_page_align.h.in  kh_text.lds.in  lint_exports.sh  lint_manifest.sh  run_android_tests.sh  test.sh  test_avd_kmod.sh  test_device_kmod.sh
scripts/investigations/2026-04-09-gki-6.6/: shrink_this_module.py
scripts/lib/: detect_toolchain.sh  test_common.sh  test_common.test.sh  test_detect_toolchain.mk  test_detect_toolchain.sh  test_detect_toolchain_runner.sh
scripts/lib/fixtures/: create_fixtures.sh
src/: core_user.c  hmem.c  hook.c  kh_strategy.c  ksyms.c  memory.c  symbol.c  sync.c  uaccess.c
src/arch/arm64/: inline.c  insn.c  pgtable.c  transit.c
src/platform/: darwin.c  hmem_user.c  hook_install_user.c  kh_section_fence.c  log_user.c  remote_stub.c  syscall.c
src/strategies/: cred_task.c  cross_cpu.c  kimage_voffset.c  memstart_addr.c  runtime_sizes.c  swapper_pg_dir.c  uaccess_copy.c
tests/: CMakeLists.txt  run_tests.sh  test_android.c  test_api_misuse.c  test_chain.c  test_hmem.c  test_linux_arm64.c  test_mem_sizes.c  test_page_isolation.c  test_reloc.c  test_remote.c
tests/golden/strategy_matrix/: README.md  expectations.yaml  survival.tsv
tests/golden/strategy_matrix/values/: Pixel_31.yaml  Pixel_32.yaml  Pixel_33.yaml  Pixel_34.yaml
tests/kmod/: BUILD.bazel  Kbuild  Makefile  Makefile.sdk  demo_kh_root.c  freestanding.lds  kmod_loader.c  kmod_log.c  kmod_mem_ops.c  kmod_shim.h  log.c  mem_ops.c  test_hook_kernel.c  test_hook_kernel.h  test_main.c  test_phase6_kh_root.c  test_phase6_kh_root.h  test_resolver_common.h  test_resolver_copy_user.c  test_resolver_cred.c  test_resolver_cross_cpu.c  test_resolver_kimage_voffset.c  test_resolver_memstart_addr.c  test_resolver_pt_regs_size.c  test_resolver_swapper_pg_dir.c  transit_setup.c
tests/kmod/export_link_test/: Makefile  exporter.c  importer.c  test_on_avd.sh  verify_elf.sh
tests/userspace/: CMakeLists.txt  run_tests.sh  test_android.c  test_api_misuse.c  test_error_paths.c  test_fp_edge.c  test_framework.h  test_framework_smoke.c  test_hmem.c  test_hook_basic.c  test_hook_chain.c  test_interaction.c  test_linux_arm64.c  test_mem_sizes.c  test_pac_strip.c  test_page_isolation.c  test_reloc.c  test_security.c  test_stress.c  test_typed_wrappers.c  test_unit.c
tools/: gen_devices_table.py
tools/kh_crc/: .gitignore  Makefile  kh_crc.c
tools/kh_crc/tests/: dummy_extra.txt  golden.expected  run_tests.sh
tools/kmod_loader/: Makefile  devices_table.generated.c  devices_table.h  kmod_loader.c  patch_this_module.h  resolver.c
tools/kmod_loader/strategies/: cli.c  probe_loaded.c  probe_ondisk.c  probe_procfs.c
tools/kmod_loader/tests/: test_config_parser.sh  test_patch_this_module.c
